# bigsort

./: .gitignore  CMakeLists.txt  README.md  bigsort.pro  bigsort.uml.dia  main.cpp
include/: manager.h  types.h
include/data_source_handlers/: data_chunk.h  data_source.h  data_source_base.h  file_data_source.h  iterator_switch.h
include/sorters/: imerger.h  isorter.h
